# TestQSS

./: README.md
cpp/: CMakeLists.txt  main.cpp
cpp/libs/SARibbon-1.2.0/: CMakeLists.txt  readme.md
cpp/libs/SARibbon-1.2.0/src/SARibbonBar/: CMakeLists.txt  SAFramelessHelper.cpp  SARibbonBar.cpp  SARibbonBar.h  SARibbonButtonGroupWidget.cpp  SARibbonCategory.cpp  SARibbonCategory.h  SARibbonCtrlContainer.cpp  SARibbonCtrlContainer.h  SARibbonGalleryGroup.cpp  SARibbonMainWindow.cpp  SARibbonMainWindow.h  SAWindowButtonGroup.cpp  SAWindowButtonGroup.h
cpp/libs/SARibbon-1.2.0/src/SARibbonBar/resource/: theme-dark.qss  theme-office2016-blue.qss  theme-win7.qss
cpp/libs/SARibbon-1.2.0/src/example/: CMakeLists.txt
cpp/libs/SARibbon-1.2.0/src/example/MainWindowExample/: CMakeLists.txt
cpp/libs/SARibbon-1.2.0/src/example/NormalMenuBarExample/: CMakeLists.txt
cpp/libs/SARibbon-1.2.0/src/example/StaticExample/: CMakeLists.txt
cpp/libs/SARibbon-1.2.0/src/example/WidgetWithRibbon/: CMakeLists.txt
cpp/res/style/: roxydoxy.qss  style.qrc  style.qss
cpp/res/translations/: app_resources.qrc  app_ru.ts
cpp/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
cpp/src/widgets/: sarribonmainwidget.cpp  sarribonmainwidget.hpp  tabwidget.cpp  tabwidget.hpp
